<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Twitter</string>
    <string name="profile_image">Profile Image</string>
    <string name="username">Username</string>
    <string name="user_screenname">User screen name</string>
    <string name="body">Tweet</string>
    <string name="time">Time</string>
    <string name="no_network">No Network available</string>
    <string name="failed">Json Request failed</string>
    <string name="compose_tweet">Compose tweet</string>
    <string name="btn_tweet">Tweet</string>
    <string name="tweet_hint">What\'s happening?</string>
    <string name="tweet_counter">140</string>
    <string name="user_id">\@</string>
    <string name="title_activity_full_tweet">Tweet</string>
    <string name="reply_tweet">Reply to Tweet</string>
    <string name="reply">Reply</string>
    <string name="tagline">Tagline</string>
    <string name="retweet_cnt">0</string>
    <string name="fav_cnt">0</string>
    <string name="retweet">RETWEETS</string>
    <string name="favorites">FAVORITES</string>
    <string name="media"> Media in tweet</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="following">FOLLOWING</string>
    <string name="tweets">TWEETS</string>
    <string name="followers">FOLLOWERS</string>
    <string name="messages">messages</string>
    <string name="search">Search</string>
    <string name=" error_fullimage">error loading full image</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_user_list">UserListActivity</string>
    <string name="title_activity_full_image_display">FullImageDisplayActivity</string>
    <string name="title_activity_direct_message">Messages</string>

</resources>