<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@id/ivProfileImage"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvUsername"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:autoLink="all"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:text="@string/body"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvUsername"
        android:layout_toRightOf="@+id/tvUsername"
        android:paddingLeft="10dp"
        android:text="@string/user_screenname"
        android:textColor="@color/gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvBody"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/tvUsername"
        android:paddingRight="10dp"
        android:text="@string/time"
        android:textColor="@color/gray"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/ivMedia"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignLeft="@+id/tvBody"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvBody"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/media"
        android:scaleType="centerCrop" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivMedia"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="2" >

        <ImageView
            android:id="@+id/ivReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/reply"
            android:src="@drawable/ic_reply" />

        <ImageView
            android:id="@+id/ivRetweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivReply"
            android:layout_toLeftOf="@+id/tvRetweetCnt"
            android:contentDescription="@string/retweet"
            android:src="@drawable/ic_retweet" />

        <ImageView
            android:id="@+id/ivFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/ivRetweet"
            android:layout_marginRight="34dp"
            android:contentDescription="@string/favorites"
            android:src="@drawable/ic_fav_star_off" />

        <TextView
            android:id="@+id/tvRetweetCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingRight="1dp"
            android:text="@string/retweet_cnt"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvFavCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivReply"
            android:layout_alignLeft="@+id/ivFavorite"
            android:paddingLeft="15dp"
            android:text="@string/fav_cnt"
            android:textSize="12sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivRetweetedIc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/ivProfileImage"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_re_tweet" />

    <TextView
        android:id="@+id/tvIfRetweeted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUsername"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@id/ivRetweetedIc"
        android:text="@string/retweet"
        android:textColor="@color/gray"
        android:textSize="12sp" />

</RelativeLayout>