<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
   <ImageView
        android:id="@+id/ivProfileImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfileImg"
        android:layout_toRightOf="@+id/ivProfileImg"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/tvUserName"
        android:paddingRight="10dp"
        android:text="@string/time"
        android:textColor="@color/gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvScreename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_toRightOf="@+id/ivProfileImg"
        android:paddingLeft="10dp"
        android:text="@string/user_screenname"
        android:textColor="@color/gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tvUserName"
        android:layout_below="@+id/tvScreename"
        android:layout_marginTop="15dp"
        android:text="TextView" />

</RelativeLayout>
