<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <ImageView
        android:id="@+id/ivFProfileImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile_image"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:paddingBottom="10dp"
        android:src="@drawable/ic_launcher" />

     <TextView
         android:id="@+id/tvFUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/ivFProfileImage"
         android:layout_toRightOf="@+id/ivFProfileImage"
         android:text="@string/username"
         android:textColor="@color/black"
         android:textSize="14sp"
         android:textStyle="bold" />

     <TextView
         android:id="@+id/tvFScreenName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvFUsername"
         android:layout_toRightOf="@+id/ivFProfileImage"
         android:paddingTop="3dp"
         android:text="@string/user_screenname"
         android:textColor="@color/gray"
         android:textSize="13sp" />

     <TextView
         android:id="@+id/tvFTagLine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tvFUsername"
         android:layout_below="@+id/tvFScreenName"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         android:text="@string/tagline"
         android:textSize="13sp" />

     <ImageView
         android:id="@+id/ivAddProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@+id/tvFUsername"
         android:layout_marginRight="13dp"
         android:src="@drawable/ic_profile_add" />

</RelativeLayout>
