<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/ivImg"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvscreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUser"
        android:layout_below="@+id/tvUser"
        android:text="@string/user_screenname"
        android:textColor="@color/gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ivImg"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivImg"
        android:layout_marginRight="10dp"
        android:autoLink="all"
        android:text="@string/body"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/ivImg"
        android:text="@string/username"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etReplyTweet"
        android:layout_width="60dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@+id/btnReply"
        android:ems="10"
        android:hint="@string/reply_tweet" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnReply"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/etReplyTweet"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:background="@drawable/rounded_button"
        android:text="@string/reply"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/ivMediaUrl"
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:layout_alignLeft="@+id/tvStatus"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvStatus"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:scaleType="centerCrop" />

    <View
        android:id="@+id/lineBelowTime"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/tvTimeStamp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ivMediaUrl"
        android:layout_below="@+id/ivMediaUrl"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:text="@string/time"
        android:textColor="@color/gray"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/tvRetweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTimeStamp"
        android:layout_below="@+id/lineBelowTime"
        android:paddingBottom="10dp"
        android:paddingTop="5dp"
        android:text="@string/retweet"
        android:textColor="@color/gray"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/tvFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvRetweets"
        android:layout_alignBottom="@+id/tvRetweets"
        android:layout_toRightOf="@+id/tvRetweets"
        android:paddingLeft="10dp"
        android:text="@string/favorites"
        android:textColor="@color/gray"
        android:textSize="12sp" />

    <View
        android:id="@+id/lineMedia"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tvRetweets"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray"
        android:paddingTop="10dp" />

    <View
        android:id="@+id/lineIcons"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray"
        android:paddingTop="10dp" />

    <LinearLayout
        android:id="@+id/lIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvRetweets"
        android:layout_alignRight="@+id/lineMedia"
        android:layout_below="@+id/tvRetweets"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="4" >

        <ImageView
            android:id="@+id/ivReplyIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reply"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ivRetweetIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_retweet"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ivFavoriteIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fav_star_off"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/ivShareIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_twitter"
            android:layout_weight="1" />
    </LinearLayout>
     <View
        android:id="@+id/lineBelowIcons"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray"
        android:layout_below="@id/lIcons"
        android:paddingTop="10dp" />

</RelativeLayout>